frontend/src/assets/markdown.css
.markdown-text p:first-child {
    margin-top: 0;
}
.markdown-text h1:first-child {
    margin-top: 0;
}
.markdown-text h2:first-child {
    margin-top: 0;
}
.markdown-text h3:first-child {
    margin-top: 0;
}
.markdown-text h4:first-child {
    margin-top: 0;
}
.markdown-text h5:first-child {
    margin-top: 0;
}
.markdown-text h6:first-child {
    margin-top: 0;
}
.markdown-text p:last-child {
    margin-bottom: 0;
}
.markdown-text h1:last-child {
    margin-bottom: 0;
}
.markdown-text h2:last-child {
    margin-bottom: 0;
}
.markdown-text h3:last-child {
    margin-bottom: 0;
}
.markdown-text h4:last-child {  
    margin-bottom: 0;
}
.markdown-text h5:last-child {
    margin-bottom: 0;
}
.markdown-text h6:last-child {
    margin-bottom: 0;
}

.markdown-text blockquote {
    color: #666;
    border-left: 4px solid #666;
    padding-left: 20px;
    margin-left: 0;
    font-size: 14px;
    font-style: italic;
}

.markdown-text ul, .markdown-text ol {
    padding-left: 2em;
}

.markdown-text table {
    display: block;
    width: 100%;
    overflow: auto;
    word-break: normal;
    word-break: keep-all;
    margin-top: 0;
    margin-bottom: 16px;
    border-collapse: collapse;
    border-spacing: 0;
}

.markdown-text table thead tr {
    border-top: 1px solid #ccc;
}

.markdown-text table th, .markdown-text table td {
    padding: 6px 13px;
    border: 1px solid #ddd;
}

.markdown-text table th {
    font-weight: bold;
}

.markdown-text code {
    max-width: 100%;
    overflow-x: auto;
}

.markdown-text img {
    width: 100%;
}

.markdown-text *:not(table, code ul, p, h1, h2, h3, h4, h5, h6) {
    margin-top: revert!important;
    margin-bottom: revert!important;
}

.markdown-text .katex .katex-html {
    display: none;
}

